# libriscv

binaries/nested/: nested.cpp
c/: libriscv.cpp
docs/: INTEGRATION.md
emulator/src/: main.cpp  settings.hpp
emulator/syscalls/src/: native_libc.cpp
fuzz/: fuzz.cpp
lib/: CMakeLists.txt
lib/libriscv/: bytecode_dispatch.cpp  bytecode_impl.cpp  common.hpp  cpu.cpp  cpu.hpp  cpu_dispatch.cpp  cpu_impl.hpp  cpu_inaccurate_dispatch.cpp  debug.cpp  debug.hpp  decode_bytecodes.cpp  decoded_exec_segment.hpp  decoder_cache.cpp  decoder_cache.hpp  decoder_cache_impl.hpp  elf.hpp  explicit_templates.cpp  guest_datatypes.hpp  machine.cpp  machine.hpp  machine_cpu.hpp  machine_defaults.cpp  machine_impl.hpp  machine_inline.hpp  machine_threads.hpp  machine_vmcall.hpp  main_memory.hpp  memory.cpp  memory.hpp  memory_helpers.hpp  memory_inline.hpp  memory_inline_pages.hpp  native_threads.cpp  page.hpp  prepared_call.hpp  riscvbase.hpp  rsp_server.hpp  rv32i.cpp  rv32i_instr.hpp  rva.hpp  (+18 more)
lib/libriscv/core/: cpu.cpp  cpu.hpp  cpu_impl.hpp  cpu_inline.hpp  instruction_counter.hpp  registers.cpp  registers.hpp  rvv_registers.hpp
lib/libriscv/core/decode/: bytecode_dispatch.cpp  bytecode_impl.cpp  cpu_dispatch.cpp  cpu_dispatch.hpp  cpu_inaccurate_dispatch.cpp  decoded_exec_segment.hpp  decoder_cache.cpp  decoder_cache.hpp  decoder_cache_impl.hpp  threaded_dispatch.cpp  threaded_inaccurate_dispatch.cpp
lib/libriscv/core/instructions/: instr_decoder.hpp  rv32i_instr.hpp  rva.hpp  rva_instr.cpp  rva_instr.hpp  rvc.hpp  rvc_instr.cpp  rvc_instr.hpp  rvf_instr.cpp  rvfd.hpp  rvfd_instr.cpp  rvfd_instr.hpp  rvi_fuse.cpp  rvi_instr.cpp  rvi_instr.hpp  rvv.hpp  rvv_instr.cpp  rvv_instr.hpp  safe_instr_loader.hpp
lib/libriscv/decode/: bytecode_dispatch.cpp  cpu_dispatch.cpp  cpu_inaccurate_dispatch.cpp  decoded_exec_segment.hpp  decoder_cache.hpp  decoder_cache_impl.hpp  threaded_bytecode_array.hpp  threaded_bytecodes.hpp
lib/libriscv/guest_os/: guest_impl.cpp  signals.cpp  signals.hpp  socket_calls.cpp
lib/libriscv/guest_os/linux/: rsp_server.hpp  syscalls_epoll.hpp  syscalls_mman.hpp  syscalls_poll.hpp  syscalls_select.hpp  system_calls_impl.hpp
lib/libriscv/guest_os/win32/: epoll.hpp  rsp_server.hpp  system_calls_impl.hpp
lib/libriscv/instructions/: instr_decoder.hpp  instr_decoding.cpp  rv32i.cpp  rv32i_instr.hpp  rv64i.cpp  rva.hpp  rva_instr.cpp  rvc.hpp  rvc32_c0_instr.cpp  rvc32_c1_instr.cpp  rvc32_c2_instr.cpp  rvc64_c0_instr.cpp  rvc64_c1_instr.cpp  rvc64_c2_instr.cpp  rvc_instr.cpp  rvf_instr.cpp  rvi_instr.cpp  rvv_instr.cpp
lib/libriscv/isa/: rva.hpp  rvc.hpp  rvfd.hpp  rvi.hpp  rvv.hpp
lib/libriscv/linux/: syscalls.hpp  syscalls_epoll.cpp  syscalls_epoll.hpp  syscalls_mman.cpp  syscalls_mman.hpp  syscalls_poll.cpp  syscalls_poll.hpp  syscalls_select.cpp  syscalls_select.hpp  system_calls.cpp
lib/libriscv/machine/: machine.cpp  machine_defaults.hpp  machine_inline.hpp  machine_serialize.hpp  machine_threads.hpp  machine_vmcall.hpp
lib/libriscv/memory/: memory.cpp  memory.hpp  memory_decoder.hpp  memory_elf.hpp  memory_helpers_paging.hpp  memory_inline.hpp  memory_inline_pages.hpp  memory_mmap.hpp  memory_rw.hpp  mmap_cache.hpp  page.hpp
lib/libriscv/posix/: minimal.cpp  signals.cpp  signals.hpp  socket_calls.cpp  threads.cpp
lib/libriscv/win32/: epoll.cpp  epoll.hpp  system_calls.cpp
tests/elf/: main.cpp
tests/instructions/: CMakeLists.txt  test_crashes.cpp  testable_instruction.hpp
tests/unit/: CMakeLists.txt  basic.cpp  basic32.cpp  brutal.cpp  checksum.cpp  codebuilder.cpp  crc32c.cpp  custom.cpp  dynamic.cpp  examples.cpp  fp_testsuite.cpp  heaptest.cpp  memory_trap.cpp  micro.cpp  native.cpp  png.cpp  protections.cpp  rvbuffer.cpp  serialize.cpp  va_execute.cpp  verify_elf.cpp  vmcall.cpp
